Fix compilecheck